Fix up dataclass testing for base keys with no path. Actually make sure dataset submission works. Some docs fixes, including generating the DB tables. Make all the tests pass again.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,8 @@
 SPHINXOPTS=-n -W -d build/doctrees .
 
+dbtables: server/details/dbtables.rst
+	PYTHONPATH=$PWD/..:$PYTHONPATH python make_dbtables.py server/details/dbtables.rst
+
 .PHONY: sphinx
 sphinx:
 	sphinx-build -b html $(SPHINXOPTS) build/html
