--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -5,6 +5,7 @@
         "submit_dir":"$PWD/submit",
         "*":{
             "description":"generic grid plugin",
+            "type":"type of grid",
             "tasks_on_queue":[1,10],
             "max_task_queued_time":86400,
             "max_task_processing_time":86400,
