Set messaging_url and adding running instructions to quick start

--- a/iceprod/server/data/etc/iceprod.cfg
+++ b/iceprod/server/data/etc/iceprod.cfg
@@ -6,5 +6,5 @@
 #website = True
 #config = True
 
-# [messaging]
-#messaging_url = ipc://$PWD/unix_socket.sock
+[messaging]
+messaging_url = tcp://127.0.0.1:5555
