update lifecycle to reflect global queueing

--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -254,8 +254,9 @@
             ["processing","reset","auto"],
             ["processing","failed","auto"],
             ["processing","suspended","debug"],
-            ["resume","waiting","std"],
+            ["resume","idle","std"],
             ["reset","waiting","std"],
+            ["reset","idle","std"],
             ["suspended","reset","manual"],
             ["failed","reset","manual"],
             ["suspended","resume","manual"],
