add an admin password to the website.  closes #1500. this also provides the frontend login structure for #847.

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -30,7 +30,8 @@
         "port":8888,
         "tornado_port":8889,
         "numcpus":1,
-        "sites":{}
+        "sites":{},
+        "password":"admin"
     },
     "master":{
         "status":"",
