submit pilot jobs. see #1616

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -3,6 +3,7 @@
         "max_resets":10,
         "task_buffer":10,
         "submit_dir":"$PWD/submit",
+        "submit_pilots":true,
         "*":{
             "description":"generic grid plugin",
             "type":"type of grid",
