key is a reserved keyword for mysql, so replace with auth_key

--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -149,7 +149,7 @@
         ],
         "passkey": [
             ["passkey_id", "str"],
-            ["key", "str"],
+            ["auth_key", "str"],
             ["expire", "str", "datetime"]
         ],
         "pilot": [
