--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -109,8 +109,8 @@
             ["req_cpu", "int"],
             ["req_gpu", "int"],
             ["req_memory", "float"],
-            ["req_disk", "float"],
-        ]
+            ["req_disk", "float"]
+        ],
         "search": [
             ["task_id", "str"],
             ["job_id", "str"],
