--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# iceprod details
+docs/server/details/dbtables.rst
+iceprod/server/data/www/dataclasses.js
