--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# swap files
+*.swp
+
 # iceprod details
 docs/server/details/dbtables.rst
 iceprod/server/data/www/dataclasses.js
