cheat a bit with dataset stats by summing times in sql. #110

--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -83,12 +83,14 @@
             ["task_id", "str"],
             ["status", "str"],
             ["prev_status", "str"],
-            ["error_message", "Text"],
             ["status_changed", "str", "datetime"],
             ["submit_dir", "Text"],
             ["grid_queue_id", "str"],
             ["failures", "int"],
             ["evictions", "int"],
+            ["walltime", "float", "good walltime used by this task"],
+            ["walltime_err", "float", "bad walltime used by this task"],
+            ["walltime_err_n", "int", "number of additions to bad walltime"],
             ["depends", "Text", "csv list of task_ids"],
             ["requirements", "Text", "json of {name:value}. overrides task_rel requirements"],
             ["task_rel_id", "str"]
