move settings table to separate SQLite DB. closes #155

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -34,6 +34,7 @@
     "db":{
         "type":"sqlite",
         "name":"db",
+        "name_setting":"db_setting",
         "nthreads":1
     },
     "webserver":{
