add req_time field

--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -111,7 +111,8 @@
             ["req_cpu", "int"],
             ["req_gpu", "int"],
             ["req_memory", "float"],
-            ["req_disk", "float"]
+            ["req_disk", "float"],
+            ["req_time", "float"]
         ],
         "search": [
             ["task_id", "str"],
