--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -51,5 +51,15 @@
     },
     "system":{
         "ssl":{}
+    },
+    "schedule":{
+        "buffer_jobs_tasks": "every 10 minutes",
+        "check_iceprod": "every 5 minutes",
+        "clean_completed_jobs": "every 1 days",
+        "generate_web_graphs": "every 10 minutes",
+        "remove_old_passkeys": "every 6 hours",
+        "collate_resources": "every 1 hours",
+        "job_completion": "every 31 minutes",
+        "dataset_completion": "every 1 hours"
     }
 }
