--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -61,6 +61,7 @@
         "collate_resources": "every 1 hours",
         "job_completion": "every 31 minutes",
         "dataset_completion": "every 1 hours",
-        "pilot_monitoring": "every 5 minutes"
+        "pilot_monitoring": "every 5 minutes",
+        "dataset_update": "every 20 minutes"
     }
 }
