--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -63,6 +63,6 @@
         "dataset_completion": "every 1 hours",
         "pilot_monitoring": "every 5 minutes",
         "dataset_update": "every 20 minutes",
-        "suspend_himem_tasks": "every 2 minutes"
+        "suspend_overusage_tasks": "every 2 minutes"
     }
 }
