make the master also generate grid metrics

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -64,6 +64,7 @@
         "pilot_monitoring": "every 5 minutes",
         "dataset_update": "every 20 minutes",
         "suspend_overusage_tasks": "every 2 minutes",
-        "check_active_pilots_tasks": "every 29 minutes"
+        "check_active_pilots_tasks": "every 29 minutes",
+        "grid_metrics": "every 2 minutes"
     }
 }
