add dataset status monitoring. for #253

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -65,6 +65,7 @@
         "dataset_update": "every 20 minutes",
         "suspend_overusage_tasks": "every 2 minutes",
         "check_active_pilots_tasks": "every 29 minutes",
-        "grid_metrics": "every 2 minutes"
+        "grid_metrics": "every 2 minutes",
+        "dataset_status_monitoring": "every 5 minutes"
     }
 }
