--- a/iceprod/server/data/etc/db_config.json
+++ b/iceprod/server/data/etc/db_config.json
@@ -115,7 +115,8 @@
             ["req_gpu", "int"],
             ["req_memory", "float"],
             ["req_disk", "float"],
-            ["req_time", "float"]
+            ["req_time", "float"],
+            ["req_os", "str"]
         ],
         "search": [
             ["task_id", "str"],
