first attempt at pushing task_stat to ES

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -66,6 +66,7 @@
         "suspend_overusage_tasks": "every 2 minutes",
         "check_active_pilots_tasks": "every 29 minutes",
         "grid_metrics": "every 2 minutes",
-        "dataset_status_monitoring": "every 5 minutes"
+        "dataset_status_monitoring": "every 5 minutes",
+        "task_stat_monitoring": "every 7 minutes"
     }
 }
