add first version of task monitoring to ES. for #254

--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -67,6 +67,7 @@
         "check_active_pilots_tasks": "every 29 minutes",
         "grid_metrics": "every 2 minutes",
         "dataset_status_monitoring": "every 5 minutes",
-        "task_stat_monitoring": "every 7 minutes"
+        "task_stat_monitoring": "every 14 minutes",
+        "task_monitoring": "every 17 minutes"
     }
 }
