--- a/iceprod/server/data/etc/config_defaults.json
+++ b/iceprod/server/data/etc/config_defaults.json
@@ -17,6 +17,7 @@
             "description":"generic grid plugin",
             "type":"type of grid",
             "tasks_on_queue":[1,10],
+            "pilots_on_queue":[1,10],
             "max_task_waiting_time":86400,
             "max_task_queued_time":86400,
             "max_task_processing_time":86400,
