try to get build artifacts (log file)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ jobs:
                 key: coverage-server-{{ .Environment.CIRCLE_SHA1 }}
                 paths:
                     - ~/iceprod/.coverage-server
+            - store_artifacts:
+                path: tests.log
 
     test_core:
         docker:
