--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,10 @@ workflows:
     build_and_test:
         jobs:
             - checkout_code
+                filters:
+                    branches:
+                      ignore:
+                        - gh-pages
             - build:
                 requires:
                     - checkout_code
