--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,7 +148,7 @@ workflows:
     version: 2
     build_and_test:
         jobs:
-            - checkout_code
+            - checkout_code:
                 filters:
                     branches:
                       ignore:
