--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ aws-xray-sdk==0.95
 Babel==2.5.1
 beautifulsoup4==4.6.0
 boto==2.49.0
-boto3==1.9.7
-botocore==1.10.84
+boto3==1.9.128
+botocore==1.12.128
 bs4==0.0.1
 cachetools==2.0.0
 certifi==2017.11.5
@@ -26,7 +26,7 @@ imagesize==0.7.1
 ipython==6.1.0
 ipython-genutils==0.2.0
 jedi==0.10.2
-Jinja2==2.10
+Jinja2==2.10.1
 jmespath==0.9.3
 jsondiff==1.1.1
 jsonpickle==1.0
@@ -34,11 +34,12 @@ jsonschema==2.6.0
 ldap3==2.4
 MarkupSafe==1.0
 mock==2.0.0
-moto==1.3.5
+moto==1.3.7
 motor==1.2.0
 pbr==4.2.0
 pexpect==4.2.1
 pickleshare==0.7.4
+pkg-resources==0.0.0
 prompt-toolkit==1.0.14
 psutil==5.2.2
 ptyprocess==0.5.2
@@ -54,13 +55,14 @@ pyOpenSSL==19.0.0
 python-dateutil==2.7.3
 python-jose==2.0.2
 pytz==2017.3
+PyYAML==5.1
 requests==2.21.0
 requests-futures==0.9.7
 requests-mock==1.3.0
 requests-toolbelt==0.8.0
 responses==0.9.0
-git+https://github.com/WIPACrepo/rest-tools.git@master
-s3transfer==0.1.13
+-e git+https://github.com/WIPACrepo/rest-tools.git@680724565a9c0d2d261b36d1e01f2713672f612a#egg=rest_tools
+s3transfer==0.2.0
 selenium==3.12.0
 setproctitle==1.1.10
 simplegeneric==0.8.1
@@ -71,7 +73,7 @@ sphinxcontrib-websupport==1.0.1
 statsd==3.2.1
 tornado==5.1.1
 traitlets==4.3.2
-urllib3==1.24.1
+urllib3==1.23
 wcwidth==0.1.7
 websocket-client==0.53.0
 Werkzeug==0.14.1
