--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ alabaster==0.7.10
 asn1crypto==0.22.0
 aws-xray-sdk==0.95
 Babel==2.5.1
+backcall==0.1.0
 beautifulsoup4==4.6.0
 boto==2.49.0
-boto3==1.9.128
-botocore==1.12.128
+boto3==1.12.3
+botocore==1.15.3
 bs4==0.0.1
 cachetools==2.0.0
 certifi==2017.11.5
@@ -18,12 +19,12 @@ decorator==4.1.1
 docker==3.5.0
 docker-pycreds==0.3.0
 docutils==0.14
-ecdsa==0.13.3
+ecdsa==0.13
 flexmock==0.10.2
 future==0.16.0
 idna==2.6
 imagesize==0.7.1
-ipython==6.1.0
+ipython==7.6.1
 ipython-genutils==0.2.0
 jedi==0.10.2
 Jinja2==2.10.1
@@ -37,9 +38,9 @@ mock==2.0.0
 moto==1.3.7
 motor==1.2.0
 pbr==4.2.0
-pexpect==4.2.1
+pexpect==4.7.0
 pickleshare==0.7.4
-prompt-toolkit==1.0.14
+prompt-toolkit==2.0.9
 psutil==5.2.2
 ptyprocess==0.5.2
 pyaml==17.12.1
@@ -48,20 +49,20 @@ pycparser==2.18
 pycryptodome==3.6.6
 Pygments==2.2.0
 PyJWT==1.5.3
-pymongo==3.6.0
+pymongo==3.10.1
 PyMySQL==0.7.11
 pyOpenSSL==19.0.0
 python-dateutil==2.7.3
 python-jose==2.0.2
 pytz==2017.3
 PyYAML==5.1
-requests==2.21.0
+requests==2.23.0
 requests-futures==0.9.7
 requests-mock==1.3.0
 requests-toolbelt==0.8.0
 responses==0.9.0
 -e git+https://github.com/WIPACrepo/rest-tools.git@680724565a9c0d2d261b36d1e01f2713672f612a#egg=rest_tools
-s3transfer==0.2.0
+s3transfer==0.3.3
 selenium==3.12.0
 setproctitle==1.1.10
 simplegeneric==0.8.1
@@ -72,9 +73,9 @@ sphinxcontrib-websupport==1.0.1
 statsd==3.2.1
 tornado==5.1.1
 traitlets==4.3.2
-urllib3==1.25.2
+urllib3==1.25.8
 wcwidth==0.1.7
 websocket-client==0.53.0
-Werkzeug==0.15.3
+Werkzeug==0.14.1
 wrapt==1.10.11
 xmltodict==0.11.0
