--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ requests-futures==0.9.7
 requests-mock==1.3.0
 requests-toolbelt==0.8.0
 responses==0.9.0
--e git+https://github.com/WIPACrepo/rest-tools.git@197e5c17dd6d3aa7ba7dc0d9b9b2e0a620019c6e#egg=rest_tools
+git+https://github.com/WIPACrepo/rest-tools@v1.0.7#egg=rest_tools
 s3transfer==0.3.3
 selenium==3.12.0
 setproctitle==1.1.10
