--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,80 @@
-alabaster==0.7.10
-asn1crypto==0.22.0
-aws-xray-sdk==0.95
-Babel==2.5.1
-backcall==0.1.0
-beautifulsoup4==4.6.0
-boto==2.49.0
-boto3==1.12.3
-botocore==1.15.3
-bs4==0.0.1
-cachetools==2.0.0
-certifi==2020.4.5.1
-cffi==1.13.2
-chardet==3.0.4
-cookies==2.2.1
-coverage==4.5.1
-cryptography==3.3.2
-decorator==4.1.1
-docker==3.5.0
-docker-pycreds==0.3.0
-docutils==0.14
-ecdsa==0.13.3
-flexmock==0.10.2
-future==0.16.0
-idna==2.6
-imagesize==0.7.1
-ipython==7.6.1
-ipython-genutils==0.2.0
-jedi==0.10.2
-Jinja2==2.11.3
-jmespath==0.9.3
-jsondiff==1.1.1
-jsonpickle==1.0
-jsonschema==2.6.0
-ldap3==2.4
-MarkupSafe==1.1.1
-mock==2.0.0
-moto==1.3.7
-motor==2.3.1
-pbr==4.2.0
-pexpect==4.7.0
-pickleshare==0.7.4
-prompt-toolkit==2.0.9
-psutil==5.6.6
-ptyprocess==0.5.2
-pyaml==17.12.1
-pyasn1==0.2.3
-pycparser==2.18
-pycryptodome==3.6.6
-Pygments==2.7.4
-pymongo==3.11.3
-PyMySQL==0.7.11
-pyOpenSSL==19.0.0
-python-dateutil==2.7.3
-python-jose==2.0.2
-pytz==2017.3
-PyYAML==5.4
-requests==2.23.0
-requests-futures==0.9.7
-requests-mock==1.3.0
-requests-toolbelt==0.8.0
-responses==0.9.0
-git+https://github.com/WIPACrepo/rest-tools@v1.1.0#egg=rest_tools
-s3transfer==0.3.3
-selenium==3.12.0
-setproctitle==1.1.10
-simplegeneric==0.8.1
-six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.6.5
-sphinxcontrib-websupport==1.0.1
-statsd==3.2.1
-tornado==5.1.1
-traitlets==4.3.2
-urllib3==1.25.8
-wcwidth==0.1.7
-websocket-client==0.53.0
-Werkzeug==0.15.3
-wrapt==1.10.11
-xmltodict==0.11.0
+alabaster>=0.7.10
+asn1crypto>=0.22.0
+aws-xray-sdk>=0.95
+Babel>=2.5.1
+backcall>=0.1.0
+beautifulsoup4>=4.6.0
+boto>=2.49.0
+boto3>=1.12.3
+botocore>=1.15.3
+bs4>=0.0.1
+cachetools>=2.0.0
+certifi>=2020.4.5.1
+cffi>=1.13.2
+chardet>=3.0.4
+cookies>=2.2.1
+coverage>=4.5.1
+cryptography>=3.3.2
+decorator>=4.1.1
+docker>=3.5.0
+docker-pycreds>=0.3.0
+docutils>=0.14
+ecdsa>=0.13.3
+flexmock>=0.10.2
+future>=0.16.0
+idna>=2.6
+imagesize>=0.7.1
+ipython>=7.6.1
+ipython-genutils>=0.2.0
+jedi>=0.10.2
+Jinja2>=2.11.3
+jmespath>=0.9.3
+jsondiff>=1.1.1
+jsonpickle>=1.0
+jsonschema>=2.6.0
+ldap3>=2.4
+MarkupSafe>=1.1.1
+mock>=2.0.0
+moto>=1.3.7
+motor>=2.3.1
+pbr>=4.2.0
+pexpect>=4.7.0
+pickleshare>=0.7.4
+prompt-toolkit>=2.0.9
+psutil>=5.6.6
+ptyprocess>=0.5.2
+pyaml>=17.12.1
+pyasn1>=0.2.3
+pycparser>=2.18
+pycryptodome>=3.6.6
+Pygments>=2.7.4
+pymongo>=3.11.3
+PyMySQL>=0.7.11
+pyOpenSSL>=19.0.0
+python-dateutil>=2.7.3
+python-jose>=2.0.2
+pytz>=2017.3
+PyYAML>=5.4
+requests>=2.23.0
+requests-futures>=0.9.7
+requests-mock>=1.3.0
+requests-toolbelt>=0.8.0
+responses>=0.9.0
+git+https://github.com/WIPACrepo/rest-tools@v1.1.6#egg=rest_tools
+s3transfer>=0.3.3
+selenium>=3.12.0
+setproctitle>=1.1.10
+simplegeneric>=0.8.1
+six>=1.11.0
+snowballstemmer>=1.2.1
+Sphinx>=1.6.5
+sphinxcontrib-websupport>=1.0.1
+statsd>=3.2.1
+tornado>=5.1.1
+traitlets>=4.3.2
+urllib3>=1.25.8
+wcwidth>=0.1.7
+websocket-client>=0.53.0
+Werkzeug>=0.15.3
+wrapt>=1.10.11
+xmltodict>=0.11.0
