--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Tar docs
       if: ${{ github.event_name != 'pull_request' }}
       run: |
-        cd docs && tar -zcf ../docs.tar.gz *
+        cd docs/build/html && tar -zcf ../../../docs.tar.gz *
     - name: Upload html
       if: ${{ github.event_name != 'pull_request' }}
       env:
