--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ jobs:
             - image: circleci/python:3.7
         working_directory: ~/iceprod
         environment:
-            - SOURCE_BRANCH: master
-            - TARGET_BRANCH: gh-pages
+            SOURCE_BRANCH: master
+            TARGET_BRANCH: gh-pages
         steps:
             - checkout
             - add_ssh_keys:
