--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,82 +29,13 @@ jobs:
                 key: venv-{{ .Branch }}-{{ checksum "requirements.txt" }}
                 paths:
                     - "env"
-
-    test_server:
-        docker:
-            - image: circleci/python:3.7
-              environment:
-                TEST_DATABASE_URL: localhost:27017
-            - image: circleci/mongo:3.7.9-ram
-        working_directory: ~/iceprod
-        steps:
-            - restore_cache:
-                keys:
-                    - code-{{ .Environment.CIRCLE_SHA1 }}
-            - restore_cache:
-                keys:
-                    - venv-{{ .Branch }}-{{ checksum "requirements.txt" }}
-            - run: |
-                . env/bin/activate &&
-                ./coverage.sh --server &&
-                mv .coverage .coverage-server
-            - save_cache:
-                key: coverage-server-{{ .Environment.CIRCLE_SHA1 }}
-                paths:
-                    - ~/iceprod/.coverage-server
-            - store_artifacts:
-                path: tests.log
-
-    test_core:
-        docker:
-            - image: circleci/python:3.7
-        working_directory: ~/iceprod
-        steps:
-            - restore_cache:
-                keys:
-                    - code-{{ .Environment.CIRCLE_SHA1 }}
-            - restore_cache:
-                keys:
-                    - venv-{{ .Branch }}-{{ checksum "requirements.txt" }}
-            - run: |
-                . env/bin/activate &&
-                ./coverage.sh --core &&
-                mv .coverage .coverage-core
-            - save_cache:
-                key: coverage-core-{{ .Environment.CIRCLE_SHA1 }}
-                paths:
-                    - ~/iceprod/.coverage-core
-
-    combine_coverage:
-        docker:
-            - image: circleci/python:3.7
-        working_directory: ~/iceprod
-        steps:
-            - restore_cache:
-                keys:
-                    - code-{{ .Environment.CIRCLE_SHA1 }}
-            - restore_cache:
-                keys:
-                    - venv-{{ .Branch }}-{{ checksum "requirements.txt" }}
-            - restore_cache:
-                keys:
-                    - coverage-server-{{ .Environment.CIRCLE_SHA1 }}
-            - restore_cache:
-                keys:
-                    - coverage-core-{{ .Environment.CIRCLE_SHA1 }}
-            - run: |
-                coverage combine .coverage-server .coverage-core &&
-                coverage html -i -d /tmp/htmlcov
-            - store_artifacts:
-                path: /tmp/htmlcov
-
     docs_build:
         docker:
             - image: circleci/python:3.7
         working_directory: ~/iceprod
         environment:
-            - SOURCE_BRANCH: master
-            - TARGET_BRANCH: gh-pages
+            SOURCE_BRANCH: master
+            TARGET_BRANCH: gh-pages
         steps:
             - checkout
             - add_ssh_keys:
@@ -156,28 +87,6 @@ workflows:
             - build:
                 requires:
                     - checkout_code
-                filters:
-                    branches:
-                      ignore:
-                        - gh-pages
-            - test_server:
-                requires:
-                    - build
-                filters:
-                    branches:
-                      ignore:
-                        - gh-pages
-            - test_core:
-                requires:
-                    - build
-                filters:
-                    branches:
-                      ignore:
-                        - gh-pages
-            - combine_coverage:
-                requires:
-                    - test_server
-                    - test_core
                 filters:
                     branches:
                       ignore:
