--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test Server
+    - name: Run tests
       run: |
         ./coverage.sh --${{ matrix.test }}
         coverage report -m --fail-under=50
