always run text coverage report

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,4 +54,7 @@ jobs:
     - name: Run tests
       run: |
         ./coverage.sh --${{ matrix.test }}
+    - name: Coverage report
+      if: always() && steps.dependencies.outcome != 'failure'
+      run: |
         coverage report -m --fail-under=50
