--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,28 +11,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install deps
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        flake8 iceprod --count --show-source --statistics
-
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        test: ["server", "core"]
-      fail-fast: false
     services:
       mongo:
         image: mongo:3.6
@@ -42,7 +22,7 @@ jobs:
       TEST_DATABASE_URL: "localhost:27017"
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
@@ -53,7 +33,11 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        ./coverage.sh --${{ matrix.test }}
+        ./coverage.sh
+    - name: Lint with flake8
+      if: always() && steps.dependencies.outcome != 'failure'
+      run: |
+        flake8 iceprod --count --show-source --statistics
     - name: Coverage report
       if: always() && steps.dependencies.outcome != 'failure'
       run: |
