--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,11 +30,12 @@ jobs:
 
     - name: Docker meta
       id: docker_meta
-      uses: crazy-max/ghaction-docker-meta@v2
+      uses: docker/metadata-action@v3
       with:
         # list of Docker images to use as base name for tags
         images: |
           wipac/iceprod
+          ghcr.io/WIPACRepo/iceprod
         tags: |
             type=ref,event=branch
             type=semver,pattern={{major}}
@@ -47,6 +48,14 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      if: ${{ github.event_name != 'pull_request' }}
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push Docker Image
       uses: docker/build-push-action@v2
