--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
@@ -20,7 +20,7 @@ jobs:
     - name: Install deps
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -e .[docs]
     - name: Build docs
       run: |
         make -C docs
