--- a/setup.cfg
+++ b/setup.cfg
@@ -52,11 +52,13 @@ install_requires =
 	motor
 	psutil
 	pymongo
+	pyOpenSSL
 	python-dateutil
 	requests
 	requests-futures
 	requests-toolbelt
 	setproctitle
+	statsd
 	tornado
 	unidecode
 	wipac-dev-tools
@@ -70,10 +72,12 @@ packages =
 
 [options.extras_require]
 tests =
+	beautifulsoup4
 	coverage
 	flake8
 	flexmock
 	mock
+	moto
 	pytest
 	pytest-asyncio
 	pytest-cov
