--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@
 #
 #    pip-compile
 #
-boto3==1.21.39
+boto3==1.24.5
     # via iceprod (setup.py)
-botocore==1.24.39
+botocore==1.27.5
     # via
     #   boto3
     #   s3transfer
-cachetools==5.0.0
+cachetools==5.2.0
     # via iceprod (setup.py)
-certifi==2021.10.8
+certifi==2022.5.18.1
     # via
     #   iceprod (setup.py)
     #   requests
@@ -20,7 +20,7 @@ cffi==1.15.0
     # via cryptography
 charset-normalizer==2.0.12
     # via requests
-cryptography==36.0.2
+cryptography==37.0.2
     # via
     #   iceprod (setup.py)
     #   pyopenssl
@@ -32,17 +32,17 @@ jmespath==1.0.0
     #   botocore
 ldap3==2.9.1
     # via iceprod (setup.py)
-motor==2.5.1
+motor==3.0.0
     # via iceprod (setup.py)
-psutil==5.9.0
+psutil==5.9.1
     # via iceprod (setup.py)
 pyasn1==0.4.8
     # via ldap3
 pycparser==2.21
     # via cffi
-pyjwt==2.3.0
+pyjwt==2.4.0
     # via wipac-rest-tools
-pymongo==3.12.3
+pymongo==4.1.1
     # via
     #   iceprod (setup.py)
     #   motor
@@ -67,9 +67,9 @@ requests-futures==1.0.0
     #   wipac-rest-tools
 requests-toolbelt==0.9.1
     # via iceprod (setup.py)
-s3transfer==0.5.2
+s3transfer==0.6.0
     # via boto3
-setproctitle==1.2.2
+setproctitle==1.2.3
     # via iceprod (setup.py)
 six==1.16.0
     # via python-dateutil
@@ -79,15 +79,17 @@ tornado==6.1
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
+typing-extensions==4.2.0
+    # via wipac-dev-tools
 unidecode==1.3.4
     # via iceprod (setup.py)
 urllib3==1.26.9
     # via
     #   botocore
     #   requests
-wipac-dev-tools==1.1.5
+wipac-dev-tools==1.2.2
     # via
     #   iceprod (setup.py)
     #   wipac-rest-tools
-wipac-rest-tools==1.3.1
+wipac-rest-tools==1.3.3
     # via iceprod (setup.py)
